[gd_scene load_steps=12 format=3 uid="uid://datxog2roqbcw"]

[ext_resource type="Script" path="res://Levels/level_settings.gd" id="1_nnvwk"]
[ext_resource type="PackedScene" uid="uid://xibpsj228onl" path="res://Player/Player.tscn" id="1_vov03"]
[ext_resource type="FontFile" uid="uid://dohbae1fvt8j3" path="res://Fonts/8-bit Arcade In.ttf" id="3_edmh0"]
[ext_resource type="PackedScene" uid="uid://bgge2sinumbrp" path="res://Coin/bread_coin.tscn" id="4_s4u86"]
[ext_resource type="PackedScene" uid="uid://d7dh8l7gn4e3" path="res://Inimigos/enemy_1.tscn" id="5_crxf8"]
[ext_resource type="PackedScene" uid="uid://bsxy63xnxuc8i" path="res://Inimigos/Enemy_2.tscn" id="6_p5xsl"]
[ext_resource type="PackedScene" uid="uid://2tuelv07yea7" path="res://Inimigos/boss.tscn" id="7_oppba"]
[ext_resource type="AudioStream" uid="uid://b552dvp8rmuym" path="res://Songs/death_sound.mp3" id="8_wmlry"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37vrt"]
size = Vector2(12344, 131.75)

[sub_resource type="LabelSettings" id="LabelSettings_7j4iw"]
font = ExtResource("3_edmh0")
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_2ub6d"]
font = ExtResource("3_edmh0")
font_size = 50

[node name="Level Settings" type="Node2D"]
script = ExtResource("1_nnvwk")

[node name="Player" parent="." instance=ExtResource("1_vov03")]
unique_name_in_owner = true
position = Vector2(649, 457)

[node name="Fall_zone" type="Area2D" parent="."]
position = Vector2(1371, 854)

[node name="Death_Zone_Collision" type="CollisionShape2D" parent="Fall_zone"]
shape = SubResource("RectangleShape2D_37vrt")

[node name="Start_pos" type="Marker2D" parent="."]
position = Vector2(291, 642)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Death_Display" type="Label" parent="UI"]
offset_top = 68.0
offset_right = 180.0
offset_bottom = 135.0
size_flags_horizontal = 4
text = "Vidas = "
label_settings = SubResource("LabelSettings_7j4iw")
horizontal_alignment = 1

[node name="Bread_Display" type="Label" parent="UI"]
offset_right = 201.0
offset_bottom = 67.0
text = "Breads ="
label_settings = SubResource("LabelSettings_2ub6d")

[node name="Bread_Coin" parent="." instance=ExtResource("4_s4u86")]
position = Vector2(646, 552)

[node name="Enemy_1_Placeholder" parent="." instance=ExtResource("5_crxf8")]
visible = false
position = Vector2(-484, -97)

[node name="Enemy_2_Placeholder" parent="." instance=ExtResource("6_p5xsl")]
visible = false
position = Vector2(-484, -97)

[node name="Boss_Placeholder" parent="." instance=ExtResource("7_oppba")]
visible = false

[node name="Death_Song" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_wmlry")

[connection signal="death_message" from="." to="." method="_on_death_message"]
[connection signal="player_death" from="Player" to="." method="_on_player_player_death"]
[connection signal="body_entered" from="Fall_zone" to="." method="_on_fall_zone_body_entered"]
[connection signal="body_entered" from="Bread_Coin" to="." method="_on_bread_coin_body_entered"]
[connection signal="enemy_death" from="Enemy_1_Placeholder" to="." method="_on_enemy_1_enemy_death"]
[connection signal="bullet" from="Enemy_2_Placeholder" to="." method="_on_enemy_2_bullet"]
[connection signal="enemy_death" from="Enemy_2_Placeholder" to="." method="_on_enemy_1_enemy_death"]
[connection signal="boss_death" from="Boss_Placeholder" to="." method="_on_boss_placeholder_boss_death"]
[connection signal="knife" from="Boss_Placeholder" to="." method="_on_boss_placeholder_knife"]
